# referral-test

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.pip
backend/conf/: asgi.py  settings.py  urls.py  wsgi.py
backend/coupons/: api.py  api_urls.py  apps.py  models.py  serializers.py  services.py  tests.py
backend/coupons/migrations/: 0001_initial.py  0002_initial.py
backend/users/: api.py  api_urls.py  auth_backend.py  managers.py  models.py  serializers.py  services.py  tests.py
backend/users/migrations/: 0001_initial.py
